Documentatie van Domain gecontroleerd + methodes gecontroleerd. Part I (to be continued ...)
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@458 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/iteratie2/graspDesignPatterns.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/graspDesignPatterns.tex
@@ -63,7 +63,7 @@ Het \textit{Strategy} pattern vinden we terug in de policies. Elke policy is een
 Naast dit model werden verschillende andere modellen bestudeerd. Bovendien kwam dit model ook met een zekere evolutie tot stand. Modellen werden ge\"implementeerd met een kritische blik op het ontstaan van problemen. Frequent werd dan ook het model herbekeken en aangepast. In deze sectie geven we een bondig overzicht van de belangrijkste overwogen alternatieven.
 \paragraph{Domeinmodel versus klassendiagram}
 Het domeinmodel in de opgave suggereert heel vaak dat bepaalde klassen dienen ge\"implementeerd te worden. Voorbeelden hierbij zijn de klassen \texttt{Caller} en \texttt{Call}. Deze werden initieel ge\"implementeerd. Er staat echter in geen enkele use case beschreven dat het bijhouden van deze instanties vereist is. Het ligt in de geest van Extreme Programming om geen functionaliteiten te schrijven die geen duidelijk nut hebben. Eenvoud ligt immers aan de basis van een goed model. Bijgevolg werd besloten deze klassen te verwijderen. Bovendien werd de implementatie zo vereenvoudigd. Iets soortgelijks gebeurde met de klassen \texttt{Operator}, \texttt{Dispatcher} en \texttt{UnitCommander}. Deze klassen zijn niet volledig verdwenen uit ons model want er bestaan nog controllers voor.
-\paragraph{Polymorfisme versus typeattribuut??}
+\paragraph{Polymorfisme versus typeattribuut}
 Een belangrijke overweging in het model was het design van een \texttt{Unit} en de bijbehorende types eenheden. Hierbij werden drie overwegingen onderzocht. De eerste mogelijkheid was --- zoals het domeinmodel suggereert --- een polymorfe aanpak. Hierbij worden klassen als \texttt{Ambulance} onder de klasse \texttt{Unit} geplaatst. Deze implementatie leidt echter tot klassen zonder inhoud. Zo erven \texttt{Firetruck} en \texttt{Policecar} alle methodes over. Maar dit model heeft geen toegevoegde waarde. De enige informatie die een \texttt{Policecar} meer bevat dan een \texttt{Unit} is zijn typeinformatie. Een alternatief werd gerealiseerd door middel van een typeattribuut. Een enumeratie \texttt{UnitType} bevat de drie verschillende types eenheden. Een \texttt{Unit} bevat vervolgens een associatie met een \texttt{UnitType}. Dit model werkt echter niet, omdat een \texttt{Ambulance} wel extra informatie bevat. Het dient immers een ziekenhuis te kunnen selecteren. Optionele attributen zijn hierbij uit den boze omdat ze de \textit{Cohesion} verlagen. Bovendien druisen ze in tegen normalisatieprincipes uit bijvoorbeeld databanken. De derde onderzochte vorm was een hybride tussen de twee vorige. Hierbij werken we met polymorfisme, maar bevat \texttt{Unit} ook een typeattribuut. Dit model gaat echter in tegen heel wat principes: er ontstaat redundantie, \textit{Protected Variation} wordt geschonden, de \textit{Cohesion} daalt en er ontstaat meer \textit{Coupling}. We opteerden bijgevolg voor de eerste mogelijkheid.
 \paragraph{EmergencyDescription}
 Een ander probleem is hoe we informatie over deze velden naar buiten kunnen brengen. Hiervoor construeerden we een \verb+EmergencyDescription+ klasse. Deze klasse bevat informatie over de verschillende parameters: hun type, naam en eventueel een beschrijving. Bovendien is deze beschrijving in staat om te controleren of een bepaalde lijst van objecten aan deze beschrijving voldoet.
