SSD's en SD's in het verslag gestoken.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@482 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/iteratie2/bijlagen.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/bijlagen.tex
@@ -6,3 +6,96 @@ Een algemeen beknopt diagram van de domeinlaag wordt beschreven in figuur \ref{f
 \label{fig:umlCompact}
 \label{fig:DomeinlaagBeknopt}
 \end{figure}
+
+\begin{figure}[h!]
+  \subfigure[SSD van de use case advance simulated time.]{
+	\includegraphics[width=1.0\textwidth]{SSDAdvanceSimulatedTime.pdf}
+	\label{fig:ssdAST}}
+
+  \subfigure[SSD van de use case end of task.]{
+	\includegraphics[width=1.0\textwidth]{SSDEndOfTask.pdf}
+	\label{fig:ssdAST}}
+\end{figure}
+
+\begin{figure}
+ \subfigure[SSD van de use case create emergency.]{
+	\includegraphics[width=1.0\textwidth]{SSDCreateEmergency.pdf}
+	\label{fig:ssdAST}}
+\end{figure}
+
+
+\begin{figure}
+  \subfigure[SSD van de use case dispatch units.]{
+	\includegraphics[width=1.0\textwidth]{SSDDispatchUnits.pdf}
+	\label{fig:ssdAST}}
+\end{figure}
+
+\begin{figure}
+  \subfigure[SSD van de use case handle emergency.]{
+	\includegraphics[width=1.0\textwidth]{SSDHandleEmergency.pdf}
+	\label{fig:ssdAST}}
+
+  \subfigure[SSD van de use case inspect emergencies.]{
+	\includegraphics[width=1.0\textwidth]{SSDInspectEmergencies.pdf}
+	\label{fig:ssdAST}}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \subfigure[SSD van de use case remove unit.]{
+	\includegraphics[width=0.8\textwidth]{SSDRemoveUnit.pdf}
+	\label{fig:ssdAST}}
+
+  \subfigure[SSD van de use case select hospital.]{
+	  \includegraphics[width=0.8\textwidth]{SSDSelectHospital.pdf}
+	  \label{fig:ssdAST}}
+\end{figure}
+
+\begin{figure}[h!]
+  \includegraphics[width=1.0\textwidth]{SDAdvanceSimulatedTime.pdf}
+  \caption{SD van de use case advance simulated time.}
+  \label{fig:sdAST}
+\end{figure}
+
+\begin{figure}[h!]
+  \includegraphics[width=1.0\textwidth]{SDCreateEmergency.pdf}
+  \caption{SD van de use case create emergency.}
+  \label{fig:sdAST}
+\end{figure}
+
+\begin{figure}[h!]
+  \includegraphics[width=1.0\textheight, angle=-90]{SDDispatchUnits.pdf}
+  \caption{SD van de use case dispatch units.}
+  \label{fig:sdAST}
+\end{figure}
+
+\begin{figure}[h!]
+  \includegraphics[width=1.0\textwidth, angle=-90]{SDEndOfTask.pdf}
+  \caption{SD van de use case end of task.}
+  \label{fig:sdAST}
+\end{figure}
+
+\begin{figure}[h!]
+  \includegraphics[width=1.0\textheight, angle=-90]{SDHandleEmergency.pdf}
+  \caption{SD van de use case handle emergency.}
+  \label{fig:sdAST}
+\end{figure}
+
+\begin{figure}[h!]
+  \includegraphics[width=1.0\textwidth]{SDInspectEmergencies.pdf}
+  \caption{SD van de use case inspect emergencies.}
+  \label{fig:sdAST}
+\end{figure}
+
+\begin{figure}[h!]
+  \includegraphics[width=1.0\textwidth]{SDRemoveUnit.pdf}
+  \caption{SD van de use case remove unit.}
+  \label{fig:sdAST}
+\end{figure}
+
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width=1.0\textheight, angle=-90]{SDSelectHospital.pdf}
+  \caption{SD van de use case select hospital.}
+  \label{fig:sdAST}
+\end{figure}
