--- a/ProjectSWOP20102011/src/verslag/iteratie2/report_iteration2.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/report_iteration2.tex
@@ -11,6 +11,7 @@
 \usepackage{multirow}
 \usepackage{color}
 \usepackage{float}
+\usepackage{subfigure}
 
 \title{Software Ontwerp - Verslag Iteratie 2\\Prof. T. Holvoet\\Dhr. T. Heyman}
 \author{Team 08:\\Willem Van Onsem\\Jonas Vanthornhout\\Pieter-Jan Vuylsteke}
