UML toegevoegd in het verslag.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@485 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/iteratie2/overzicht.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/overzicht.tex
@@ -16,9 +16,9 @@ We deelden het project op in 11 verschillende packages:
 \end{itemize}
 Deze opdeling gebeurde om de verschillende lagen van elkaar te onderscheiden. Zo kunnen we bepaalde zichtbaarheidsrechten afdwingen. Waarbij de domeinlaag package enkel afhankelijk is van de exceptions.
 Dit betekent dat het bestaan van klassen in de domeinlaag niet afhangt van het bestaan van klassen in de controller, domein validators, external system, factories, main, userinterface of utils laag.
-We zullen nu de verschillende lagen meer in detail bespreken.
+We zullen nu de verschillende lagen meer in detail bespreken. In de bijlage bevinden zich de system sequence diagrams en de sequence diagrams.
 \subsection{Domeinlaag}
- Het klassendiagram van de domeinlaag bevindt zich op figuur \ref{fig:DomeinlaagBeknopt} op pagina \pageref{fig:DomeinlaagBeknopt}. Centraal hierin bevindt zich uiteraard de klasse \texttt{Emergency}. Onder deze klasse komen dan de verschillende types emergencies. Namelijk de klassen \texttt{Fire}, \texttt{PublicDisturbance}, \texttt{Robbery} en \texttt{TrafficAccident}. Ze vormen elk een subklasse met hun specifieke attributen. Een andere belangrijke klasse is de \texttt{Unit} klasse. Deze bevat de specifieke data over een eenheid. Omdat een \texttt{Unit} en gebouwen zoals een \texttt{Hospital} enkele eigenschappen gemeen hebben (zoals een naam en een locatie), bestaat er een superklasse die ze generaliseert. Namelijk de klasse \texttt{MapItem}. Een klasse \texttt{Building} werd overwogen, maar levert hier nog geen toegevoegde waarde. De klasse \texttt{Unit} wordt verder gespecifieerd in verschillende typen eenheden, namelijk een \texttt{Firetruck}, \texttt{Ambulance} of \texttt{Policecar}. Het is uiteraard de bedoeling dat deze units toegewezen kunnen worden aan een bepaalde \texttt{Emergency}. Deze verantwoordelijkheid wordt vervuld door de klasse \texttt{UnitsNeeded}. Deze klasse houdt bij welke \texttt{Unit}s  er aan het werken zijn voor een specifieke \texttt{Emergency} en welke al klaar zijn. Verder bevat deze klasse ook een \texttt{Constraint} en een \texttt{Policy}. Deze zorgen voor een juiste assignatie van de \texttt{Unit}s. Ook bestaat er een interface \texttt{TimeSensitive}. Deze duidt aan dat een klasse die deze interface implementeert, afhankelijk is van de tijd. Een ander belangrijk aspect aan de domeinlaag is dat er geen klassen zoals \texttt{Caller} of \texttt{Call} of \texttt{Operator} bestaan. Deze bestaan alleen in het domeinmodel. Maar aangezien er nergens een use case bestaat die hiervan gebruik maakt, zijn ze overbodig.
+ Het klassendiagram van de domeinlaag bevindt zich op figuur \ref{fig:DomeinlaagBeknopt} op pagina \pageref{fig:DomeinlaagBeknopt}. Een uitgebreider UML diagram bevind zich in de bijlage. Voor de eenvoud is het opgesplits in drie verschillende delen. Centraal hierin bevindt zich uiteraard de klasse \texttt{Emergency}. Onder deze klasse komen dan de verschillende types emergencies. Namelijk de klassen \texttt{Fire}, \texttt{PublicDisturbance}, \texttt{Robbery} en \texttt{TrafficAccident}. Ze vormen elk een subklasse met hun specifieke attributen. Een andere belangrijke klasse is de \texttt{Unit} klasse. Deze bevat de specifieke data over een eenheid. Omdat een \texttt{Unit} en gebouwen zoals een \texttt{Hospital} enkele eigenschappen gemeen hebben (zoals een naam en een locatie), bestaat er een superklasse die ze generaliseert. Namelijk de klasse \texttt{MapItem}. Een klasse \texttt{Building} werd overwogen, maar levert hier nog geen toegevoegde waarde. De klasse \texttt{Unit} wordt verder gespecifieerd in verschillende typen eenheden, namelijk een \texttt{Firetruck}, \texttt{Ambulance} of \texttt{Policecar}. Het is uiteraard de bedoeling dat deze units toegewezen kunnen worden aan een bepaalde \texttt{Emergency}. Deze verantwoordelijkheid wordt vervuld door de klasse \texttt{UnitsNeeded}. Deze klasse houdt bij welke \texttt{Unit}s  er aan het werken zijn voor een specifieke \texttt{Emergency} en welke al klaar zijn. Verder bevat deze klasse ook een \texttt{Constraint} en een \texttt{Policy}. Deze zorgen voor een juiste assignatie van de \texttt{Unit}s. Ook bestaat er een interface \texttt{TimeSensitive}. Deze duidt aan dat een klasse die deze interface implementeert, afhankelijk is van de tijd. Een ander belangrijk aspect aan de domeinlaag is dat er geen klassen zoals \texttt{Caller} of \texttt{Call} of \texttt{Operator} bestaan. Deze bestaan alleen in het domeinmodel. Maar aangezien er nergens een use case bestaat die hiervan gebruik maakt, zijn ze overbodig.
 \subsection{Domein listlaag}
 Deze laag bevat vier klassen namelijk \texttt{EmergencyList}, \texttt{MapItemList}, \texttt{TimeSensitiveList} en \texttt{World}. De klasse \texttt{World} bevat de eerste drie klassen.
 \subsection{Domein validatorslaag}
