Referenties weg, en UML geroteerd.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@486 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/iteratie2/bijlagen.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/bijlagen.tex
@@ -1,7 +1,7 @@
 \label{bijlagen}
-Een algemeen beknopt diagram van de domeinlaag wordt beschreven in figuur \ref{fig:umlCompact}.
 \begin{figure}[h!]
-\includegraphics[width=1.0\textwidth]{DomeinlaagBeknopt.pdf}
+\centering
+\includegraphics[width=1.0\textwidth, angle=-90]{DomeinlaagBeknopt.pdf}
 \caption{UML diagram van het domein.}
 \label{fig:umlCompact}
 \label{fig:DomeinlaagBeknopt}
