--- a/ProjectSWOP20102011/src/verslag/iteratie2/bijlagen.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/bijlagen.tex
@@ -1,7 +1,7 @@
 \label{bijlagen}
 \begin{figure}[h!]
 \centering
-\includegraphics[width=1.0\textwidth, angle=-90]{DomeinlaagBeknopt.pdf}
+\includegraphics[width=0.9\textheight, angle=-90]{DomeinlaagBeknopt.pdf}
 \caption{UML diagram van het domein.}
 \label{fig:umlCompact}
 \label{fig:DomeinlaagBeknopt}
