Figuren staan nu op de juiste plaats. MAAR we hebben 25 pagina's ZONDER voorblad, is dat boven de limiet of niet?
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@490 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/iteratie2/bijlagen.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/bijlagen.tex
@@ -36,6 +36,9 @@
  \subfigure[SSD van de use case create emergency.]{
 	\includegraphics[width=1.0\textwidth]{SSDCreateEmergency.pdf}
 	}
+  \subfigure[SSD van de use case inspect emergencies.]{
+	\includegraphics[width=1.0\textwidth]{SSDInspectEmergencies.pdf}
+	}
 \end{figure}
 
 
@@ -48,10 +51,6 @@
 \begin{figure}
   \subfigure[SSD van de use case handle emergency.]{
 	\includegraphics[width=1.0\textwidth]{SSDHandleEmergency.pdf}
-	}
-
-  \subfigure[SSD van de use case inspect emergencies.]{
-	\includegraphics[width=1.0\textwidth]{SSDInspectEmergencies.pdf}
 	}
 \end{figure}
 
@@ -67,50 +66,49 @@
 \end{figure}
 
 \begin{figure}[h!]
+  \centering
   \includegraphics[width=1.0\textwidth]{SDAdvanceSimulatedTime.pdf}
   \caption{SD van de use case advance simulated time.}
-  
 \end{figure}
 
 \begin{figure}[h!]
+  \centering
   \includegraphics[width=1.0\textwidth]{SDCreateEmergency.pdf}
   \caption{SD van de use case create emergency.}
-  
 \end{figure}
 
 \begin{figure}[h!]
-  \includegraphics[width=1.0\textheight, angle=-90]{SDDispatchUnits.pdf}
+  \centering
+  \includegraphics[width=1.0\textwidth, angle=-90]{SDDispatchUnits.pdf}
   \caption{SD van de use case dispatch units.}
-  
 \end{figure}
 
 \begin{figure}[h!]
+  \centering
   \includegraphics[width=1.0\textwidth, angle=-90]{SDEndOfTask.pdf}
   \caption{SD van de use case end of task.}
-  
 \end{figure}
 
 \begin{figure}[h!]
-  \includegraphics[width=1.0\textheight, angle=-90]{SDHandleEmergency.pdf}
+  \centering
+  \includegraphics[width=1.0\textwidth, angle=-90]{SDHandleEmergency.pdf}
   \caption{SD van de use case handle emergency.}
-  
 \end{figure}
 
 \begin{figure}[h!]
-  \includegraphics[width=1.0\textwidth]{SDInspectEmergencies.pdf}
+  \centering
+  \includegraphics[width=1.0\textwidth, angle=-90]{SDInspectEmergencies.pdf}
   \caption{SD van de use case inspect emergencies.}
-  
 \end{figure}
 
 \begin{figure}[h!]
-  \includegraphics[width=1.0\textwidth]{SDRemoveUnit.pdf}
+  \centering
+  \includegraphics[width=1.0\textwidth, angle=-90]{SDRemoveUnit.pdf}
   \caption{SD van de use case remove unit.}
-  
 \end{figure}
 
 \begin{figure}[h!]
   \centering
   \includegraphics[width=1.0\textheight, angle=-90]{SDSelectHospital.pdf}
   \caption{SD van de use case select hospital.}
-  
 \end{figure}
