--- a/ProjectSWOP20102011/src/verslag/iteratie2/overzicht.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/overzicht.tex
@@ -30,4 +30,4 @@ Om het model makkelijk uitbreidbaar te maken, waarbij zelfs bijvoorbeeld geen re
 \subsection{Controllerlaag}
 Vervolgens bevat de controller package alle controllers die de domeinlaag aansturen. Hierbij beschouwen we een abstracte klasse \texttt{Controller}. Waardoor alle controllers een link naar het \texttt{World} object bevatten. Deze wereld kunnen ze dan vervolgens manipuleren. De controllers zijn behoorlijk gelijklopend met de use cases. Voor de initialisatie van de omgeving werd een aparte controller \texttt{ReadEnvironmentDataController} geschreven. Deze is in staat om \texttt{Unit}s en \texttt{Hospital}s aan de wereld toe te voegen.
 \subsection{Exceptions, Main, Userinterface en Utils}
-Om de code overzichtelijk te houden, werd geopteerd voor een aparte package \texttt{projectswop20102011.exceptions}. Deze omvat alle exceptions in het volledige project. Aangezien deze dus op alle lagen kunnen voorkomen, blijft dit de afscherming van de domeinlaag garanderen. We hebben ook een package die enkel de \texttt{Main} bevat. Vervolgens bevat de userinterface laag verschillende klassen die de communicatie met de gebruiker mogelijk maken. Deze klassen staan in een gelaagde structuur, om makkelijk nieuwe use cases te implementeren. Ten slotte hebben we nog een utilslaag die hulpmethoden voorziet.
+Om de code overzichtelijk te houden, werd geopteerd voor een aparte package \texttt{projectswop20102011.\-exceptions}. Deze omvat alle exceptions in het volledige project. Aangezien deze dus op alle lagen kunnen voorkomen, blijft dit de afscherming van de domeinlaag garanderen. We hebben ook een package die enkel de \texttt{Main} bevat. Vervolgens bevat de userinterface laag verschillende klassen die de communicatie met de gebruiker mogelijk maken. Deze klassen staan in een gelaagde structuur, om makkelijk nieuwe use cases te implementeren. Ten slotte hebben we nog een utilslaag die hulpmethoden voorziet.
