--- a/ProjectSWOP20102011/src/verslag/iteratie2/report_iteration2.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/report_iteration2.tex
@@ -2,7 +2,6 @@
 \usepackage[dutch]{babel}
 \usepackage{fullpage}
 \usepackage{emp}
-\usepackage{pst-uml}
 \usepackage{tikz}
 \usepackage{graphicx}
 \usepackage{listings}
@@ -12,6 +11,7 @@
 \usepackage{color}
 \usepackage{float}
 \usepackage{subfigure}
+\newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 
 \title{Software Ontwerp - Verslag Iteratie 2\\Prof. T. Holvoet\\Dhr. T. Heyman}
 \author{Team 08:\\Willem Van Onsem\\Jonas Vanthornhout\\Pieter-Jan Vuylsteke}
@@ -20,7 +20,33 @@
 \begin{document}
 \begin{empfile}
 \begin{titlepage}
-\maketitle
+\begin{center}
+\HRule \\[0.4cm]
+{ \huge \bfseries Software Ontwerp - Verslag Iteratie 2}\\[0.4cm]
+\HRule \\[1.5cm]
+\begin{minipage}{0.4\textwidth}
+\begin{flushleft} \large
+\emph{Professor:}\\
+T. \textsc{Holvoet}\\
+\emph{Begeleider:}\\
+T. \textsc{Heyman}
+\end{flushleft}
+\end{minipage}
+\begin{minipage}{0.4\textwidth}
+\begin{flushright} \large
+\emph{Team 08:} \\
+Willem \textsc{Van Onsem}\\
+Jonas \textsc{Vanthornhout}\\
+Pieter-Jan \textsc{Vuylsteke}
+\end{flushright}
+\end{minipage}
+
+\vfill
+
+% Bottom of the page
+{\large \today}
+%\maketitle
+\end{center}
 \end{titlepage}
 \tableofcontents
 \newpage
