--- a/ProjectSWOP20102011/src/verslag/iteratie2/teststrategie.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/teststrategie.tex
@@ -8,30 +8,4 @@ Voor bijna iedere klasse uit de domeinlaag maakten we een respectievelijke testk
 Bijvoorbeeld de testklasse \texttt{FiretruckTest} voor de klasse \texttt{Firetruck} en analoog voor de andere testklassen.
 Er werd steeds volgens hetzelfde patroon gewerkt. Eerst werden de constructors getest en vervolgens de andere niet-triviale methoden.
 Ook de testen werden incrementeel opgebouwd, aangezien verschillende delen van het model in de loop van het project werden verworpen of uitgebreid.
-Deze aanpassingen werden dan doorgevoerd op de testklassen.
-Om het ontwerp van onze testen te illustreren, geven we hieronder een ruwe schets van hoe we te werk gingen.
-\begin{lstlisting}
-//Imports
-public class Testklasse{
-     //Declaratie van variabelen
-
-     @Before
-     public void setUp(){
-          //Initialisatie van variabelen en hulpobjecten
-     }
-
-     @Test
-     public void testEenMethode() throws ... {
-          //Aanmaken van objecten
-          //Schrijven van assert statements
-
-     }
-     @Test(expected = ExceptionClass.class)
-     public void testEenMethode() throws ... {
-          //Aanmaken van objecten
-          //Schrijven van commando's die ExceptionClass moeten gooien.
-
-     }
-
-}
-\end{lstlisting}
+Deze aanpassingen werden dan doorgevoerd op de testklassen. Sommige klassen konden niet rechtstreeks worden getest wegens verplichte bindingen.
