--- a/ProjectSWOP20102011/src/verslag/iteratie2/bijlagen.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/bijlagen.tex
@@ -8,75 +8,49 @@
 \end{figure}
 
 \begin{figure}
-  \includegraphics[width=1.0\textwidth]{DomeinlaagUitgebreid_A.pdf}
-  \caption{Uitgebreid deel van het UML diagram van het domein.}
-\end{figure}
-
-\begin{figure}
-  \includegraphics[width=1.0\textwidth]{DomeinlaagUitgebreid_B.pdf}
-  \caption{Uitgebreid deel van het UML diagram van het domein.}
-\end{figure}
-
-\begin{figure}
-  \includegraphics[width=1.0\textwidth]{DomeinlaagUitgebreid_C.pdf}
-  \caption{Uitgebreid deel van het UML diagram van het domein.}
+  \centering
+  \subfigure[Domeinlaag in meer detail A.]{\includegraphics[height=0.32\textheight]{DomeinlaagUitgebreid_A.pdf}}
+  \subfigure[Domeinlaag in meer detail B.]{\includegraphics[width=\textwidth]{DomeinlaagUitgebreid_B.pdf}}
+  \subfigure[Domeinlaag in meer detail C.]{\includegraphics[height=0.32\textheight]{DomeinlaagUitgebreid_C.pdf}}
+  \caption{Domeinlaag in meer detail.}
 \end{figure}
 
 \begin{figure}[h!]
+	\centering
   \subfigure[SSD van de use case advance simulated time.]{
-	\includegraphics[width=1.0\textwidth]{SSDAdvanceSimulatedTime.pdf}
+	\includegraphics[width=0.4\textwidth]{SSDAdvanceSimulatedTime.pdf}
 	}
-
+	\subfigure[SSD van de use case create emergency.]{
+	\includegraphics[width=0.4\textwidth]{SSDCreateEmergency.pdf}
+	}
   \subfigure[SSD van de use case end of task.]{
-	\includegraphics[width=1.0\textwidth]{SSDEndOfTask.pdf}
+	\includegraphics[width=0.4\textwidth]{SSDEndOfTask.pdf}
+	}  \subfigure[SSD van de use case inspect emergencies.]{
+	\includegraphics[width=0.4\textwidth]{SSDInspectEmergencies.pdf}
+	}
+	\subfigure[SSD van de use case dispatch units.]{
+	\includegraphics[width=0.4\textwidth]{SSDDispatchUnits.pdf}
+	}  \subfigure[SSD van de use case handle emergency.]{
+	\includegraphics[width=0.4\textwidth]{SSDHandleEmergency.pdf}
 	}
 \end{figure}
-
-\begin{figure}
- \subfigure[SSD van de use case create emergency.]{
-	\includegraphics[width=1.0\textwidth]{SSDCreateEmergency.pdf}
-	}
-  \subfigure[SSD van de use case inspect emergencies.]{
-	\includegraphics[width=1.0\textwidth]{SSDInspectEmergencies.pdf}
-	}
-\end{figure}
-
-
-\begin{figure}
-  \subfigure[SSD van de use case dispatch units.]{
-	\includegraphics[width=1.0\textwidth]{SSDDispatchUnits.pdf}
-	}
-\end{figure}
-
-\begin{figure}
-  \subfigure[SSD van de use case handle emergency.]{
-	\includegraphics[width=1.0\textwidth]{SSDHandleEmergency.pdf}
-	}
-\end{figure}
-
 \begin{figure}
   \centering
   \subfigure[SSD van de use case remove unit.]{
-	\includegraphics[width=0.8\textwidth]{SSDRemoveUnit.pdf}
+	\includegraphics[width=0.4\textwidth]{SSDRemoveUnit.pdf}
 	}
-
   \subfigure[SSD van de use case select hospital.]{
-	  \includegraphics[width=0.8\textwidth]{SSDSelectHospital.pdf}
+	  \includegraphics[width=0.4\textwidth]{SSDSelectHospital.pdf}
 	  }
 \end{figure}
 
 \begin{figure}[h!]
   \centering
-  \includegraphics[width=1.0\textwidth]{SDAdvanceSimulatedTime.pdf}
-  \caption{SD van de use case advance simulated time.}
+  \subfigure[SD van de use case advance simulated time.]{
+  \includegraphics[width=1.0\textwidth]{SDAdvanceSimulatedTime.pdf}}
+  \subfigure[SD van de use case create emergency.]{
+  \includegraphics[width=1.0\textwidth]{SDCreateEmergency.pdf}}
 \end{figure}
-
-\begin{figure}[h!]
-  \centering
-  \includegraphics[width=1.0\textwidth]{SDCreateEmergency.pdf}
-  \caption{SD van de use case create emergency.}
-\end{figure}
-
 \begin{figure}[h!]
   \centering
   \includegraphics[width=1.0\textwidth, angle=-90]{SDDispatchUnits.pdf}
