--- a/ProjectSWOP20102011/src/verslag/iteratie2/graspDesignPatterns.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/graspDesignPatterns.tex
@@ -5,12 +5,12 @@
 In onze implementatie proberen we in de meeste gevallen zo generisch mogelijk te werken. Dit heeft als indirect gevolg dat de koppeling in ons domeinmodel zeer laag is. Immers dient bij een generische implementatie abstractie gemaakt te worden van de details in de ongekende subklassen. Bijgevolg zijn enkel koppelingen zoals deze tussen \texttt{Emergency} en \texttt{Unit}, of naar de klassen van hun attributen van belang.
 \subsubsection{Polymorphism}
 Het pattern \textit{Polymorphism} dient vervolgens de ontbrekende details in te vullen. E\'en concreet voorbeeld hiervan is de \texttt{Emergency.calculateUnitsNeeded()} methode. Hierbij dient een specifiek type \texttt{Emergency} zelf uit te maken welke en hoeveel units er naar deze \texttt{Emergency} gestuurd moeten worden, en wat de beleidsregels zijn. Dit beantwoordt bovendien ook aan het \textit{Information Expert} patroon. Een Emergency zelf weet immers het best hoe er gereageerd dient te worden.
-\paragraph{}
+\subsubsection{Protected Variation}
 Ook hebben we zoveel mogelijk attributen proberen te groeperen in enumeraties. Zo hebben we bijvoorbeeld een \texttt{EmergencyStatus}, \texttt{EmergencySeverity} en \texttt{FireSize}. Dit heeft tot gevolg dat indien er bijvoorbeeld een nieuwe status toegevoegd wordt aan het model, we niets aan de \texttt{Emergency} zelf moeten veranderen. Dit is een voorbeeld van \textit{Protected Variation}. Een ander voorbeeld hiervan is onze interface \texttt{TimeSensitive}. \texttt{TimeSensitive} zegt dat het object die deze interface implementeert, afhankelijk is van de tijd. Voorlopig zijn dat enkel objecten van de klasse \texttt{Unit}. Maar als in de toekomst een \texttt{Hospital} tijdsafhankelijk wordt, dan kan dit ziekenhuis eenvoudig deze interface implementeren. Analoog werkt dit uiteraard ook voor bijvoorbeeld \texttt{Emergency}.
-\paragraph{}
+\subsubsection{Pure Fabrication}
 Een voorbeeld van \textit{Pure Fabrication} is de klasse \texttt{UnitsNeeded}. Deze klasse is verantwoordelijk voor de boekhouding van de toegewezen eenheden. De \textit{Cohesion} daalt immers wanneer de units verantwoordelijk zijn voor hun toewijziging aan de \texttt{Emergency}, of indien de \texttt{Emergency} zelf zijn units moet kiezen. Daarom hebben we ervoor gekozen een aparte klasse aan te maken die deze verantwoordelijkheid draagt. \texttt{UnitsNeeded} zorgt er ook voor dat er geen directe koppeling is tussen \texttt{Emergency} en \texttt{Unit}. Dit moet feitelijk ook niet aangezien een emergency bepaalde types units vereist en niet een unit zelf.
 \paragraph{} Een voorbeeld van het \textit{Protected Variation} patroon is de klasse \texttt{Emergency\-Evaluation\-Criterium} en haar kind \texttt{Status\-Equality\-Emergency\-Evaluation\-Criterium}. Dit zijn klassen die een zoekoperatie kunnen uitvoeren op een \texttt{EmergencyList}. Aangezien er feitelijk op elke mogelijke combinatie van de attributen van emergency een zoekoperatie bestaat hebben we een algemene klasse \texttt{Emergency\-Evaluation\-Criterium} ge\"implementeerd. Deze stelt gewoon een zoekoperatie voor. De zoekoperatie zelf wordt dan gespecifieerd in een kind van deze klasse.
-\paragraph{}
+\subsubsection{Controller}
 Voorbeelden van het \textit{Controller} patroon zijn er ook genoeg. Namelijk heel de package \texttt{projectswop\-2010\-2011.con\-trollers}. Deze dienen als koppeling tussen de user interface en het feitelijke systeem. Aangezien een controller maar heel weinig functionaliteit mag bezitten, zijn deze klassen dan ook bijzonder kort.
 \paragraph{}
 Ook hebben we systematisch een lijst-klasse gemaakt wanneer er een klasse verbonden moet worden met \texttt{World}. Zo hebben we \texttt{EmergencyList}, \texttt{MapItemList} en \texttt{TimeSensitiveList}. Zoals de namen al doen vermoeden, groeperen deze lijsten objecten van een gelijknamige klasse. Zo bevat \texttt{EmergencyList} een lijst van emergencies, \texttt{MapItemList} een lijst van \texttt{MapItem}s enzovoort. Hierdoor heeft de klasse \texttt{World} een minimaal aantal verantwoordelijkheden. Zo is het niet de bedoeling dat \texttt{World} een sortering moet uitvoeren op zijn emergencies. Tevens is dit ook niet de verantwoordelijkheid van een emergency zelf. Een elegante oplossing is een nieuwe klasse tussen \texttt{World} en \texttt{Emergency} toevoegen. Deze klasse heeft dan als verantwoordelijkheid de emergencies op te slaan en eventueel operaties op deze lijst uit te voeren. Het is niet de bedoeling dat \texttt{EmergencyList} operaties op \texttt{Emergency} zelf gaat uitvoeren. \texttt{MapItemList} en \texttt{TimeSensitiveList} hebben we analoog ge\"implementeerd. Dit is dus een voorbeeld van \textit{Pure Fabrication} met als gevolg dat de \textit{Cohesion} stijgt. Ook het \textit{Indirection} patroon is hier gedeeltelijk aan de orde.
