Kleine correctie in patterns sectie "Design-Patterns" veranderd naar "Design Patterns" (kweethet, tzin minuscule dingskses, ma alsk ze zie, dan verander ik ze)
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@517 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/iteratie2/graspDesignPatterns.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/graspDesignPatterns.tex
@@ -16,7 +16,7 @@ Voorbeelden van het \textit{Controller} patroon zijn er ook genoeg. Namelijk hee
 Ook hebben we systematisch een lijst-klasse gemaakt wanneer er een klasse verbonden moet worden met \texttt{World}. Zo hebben we \texttt{EmergencyList}, \texttt{MapItemList} en \texttt{TimeSensitiveList}. Zoals de namen al doen vermoeden, groeperen deze lijsten objecten van een gelijknamige klasse. Zo bevat \texttt{EmergencyList} een lijst van emergencies, \texttt{MapItemList} een lijst van \texttt{MapItem}s enzovoort. Hierdoor heeft de klasse \texttt{World} een minimaal aantal verantwoordelijkheden. Zo is het niet de bedoeling dat \texttt{World} een sortering moet uitvoeren op zijn emergencies. Tevens is dit ook niet de verantwoordelijkheid van een emergency zelf. Een elegante oplossing is een nieuwe klasse tussen \texttt{World} en \texttt{Emergency} toevoegen. Deze klasse heeft dan als verantwoordelijkheid de emergencies op te slaan en eventueel operaties op deze lijst uit te voeren. Het is niet de bedoeling dat \texttt{EmergencyList} operaties op \texttt{Emergency} zelf gaat uitvoeren. \texttt{MapItemList} en \texttt{TimeSensitiveList} hebben we analoog ge\"implementeerd. Dit is dus een voorbeeld van \textit{Pure Fabrication} met als gevolg dat de \textit{Cohesion} stijgt. Ook het \textit{Indirection} patroon is hier gedeeltelijk aan de orde.
 \subsection{Invloed van Design patterns}
 \label{designpatterns}
-In de volgende paragrafen stellen we enkele \textit{Design-Patterns} voor die we bewust gemodelleerd hebben. Verder werden onbewust ook andere Patterns ge\"implementeerd die achteraf in het boek beschreven bleken. Deze patterns worden niet opgenomen. Het zou de lijst te lang maken, bovendien is de verantwoording van deze patterns meestal heel eenvoudig.
+In de volgende paragrafen stellen we enkele \textit{Design Patterns} voor die we bewust gemodelleerd hebben. Verder werden onbewust ook andere Patterns ge\"implementeerd die achteraf in het boek beschreven bleken. Deze patterns worden niet opgenomen. Het zou de lijst te lang maken, bovendien is de verantwoording van deze patterns meestal heel eenvoudig.
 \subsubsection{Composite}
 \paragraph{}
 We stellen onze constraints op onze emergency voor als een boom. Deze implementatie is een toepassing van het \textit{Composite} pattern. Hierbij zien we \texttt{Dispatch\-Units\-Constraint} in de rol van \texttt{Component} en de \texttt{Number\-Dispatch\-Units\-Constraint} is \'e\'en van de eventueel later uitgebreide \texttt{Leaf}s. Tot slot zien we \texttt{And\-Dispatch\-Units\-Constraint} als de \texttt{Composite} klasse. Gegeven de specificaties in de opgave is dergelijke structuur misschien ``overkill''. We zijn echter makkelijk in staat om nieuwe types constraints toe te voegen, net als connectoren (zoals bijvoorbeeld een OR). Het uitgewerkte UML diagram met de relevante methodes staat op figuur \ref{fig:compositePattern}.
