Werkwoordsfout uit de uitbreidingen gehaald.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@522 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/iteratie2/uitbreidingen.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/uitbreidingen.tex
@@ -1,7 +1,7 @@
 \label{uitbreidbaarheid}
 Het project is gebouwd vanuit het idee dat we enkele standaard aanpassingen moeten kunnen verwerken, zonder veel code te wijzigen. Een voorbeeld hiervan is de implementatie van de emergencies. Een gevolg van deze uitbreidbaarheid is \textit{Low Coupling}. Immers houdt \textit{Low Coupling} in dat veranderingen op bepaalde plaatsen maar zeer beperkt effect hebben op de code op andere plaatsen. Uitbreidbaarheid streeft dus in sommige gevallen naar hetzelfde als de GRASP Patterns.
 \paragraph{}
-Welke uitbreidingen hebben we dan in gedachten? In de eerste plaats doet het model ons vermoeden dat de types Emergencies wel eens uitgebreid kunnen worden. De lijst van emergencies is immers beperkt. In het geval dat we een nieuw type \texttt{Emergency} willen toevoegen, bijvoorbeeld een vulkaanuitbarsting, hoeven we immers alleen een subklasse \texttt{VolcanicEruption} te implementeren. Meestal volstaat het enkele methodes zoals bijvoorbeeld de methode \texttt{Emergency.calculateUnitsNeeded()} te implementeren. Er wordt dus tot op zeker niveau abstractie gemaakt van het type \texttt{Emergency}. Bovendien werd met behulp van het \textit{Factory Method-Pattern} de constructie van een \texttt{Emergency} generisch opgelost. De programmeur dient enkel een extra \texttt{Factory} implementeerd en eventueel extra \texttt{Parsers}. Het omzetten van een commando naar een nieuwe \texttt{Emergency} gebeurt dan volledig autonoom. Verder worden de belangrijkste associaties op een hoog niveau gelegd, waardoor we van de specifieke \texttt{Emergency} abstractie kunnen maken. Een analoge uitbreiding is deze van de \texttt{MapItem} types. Opnieuw kunnen we hier met een gelijkaardig scenario eenvoudig een extra \texttt{Unit} of \texttt{Building} toe te voegen.
+Welke uitbreidingen hebben we dan in gedachten? In de eerste plaats doet het model ons vermoeden dat de types Emergencies wel eens uitgebreid kunnen worden. De lijst van emergencies is immers beperkt. In het geval dat we een nieuw type \texttt{Emergency} willen toevoegen, bijvoorbeeld een vulkaanuitbarsting, hoeven we immers alleen een subklasse \texttt{VolcanicEruption} te implementeren. Meestal volstaat het enkele methodes zoals bijvoorbeeld de methode \texttt{Emergency.calculateUnitsNeeded()} te implementeren. Er wordt dus tot op zeker niveau abstractie gemaakt van het type \texttt{Emergency}. Bovendien werd met behulp van het \textit{Factory Method-Pattern} de constructie van een \texttt{Emergency} generisch opgelost. De programmeur dient enkel een extra \texttt{Factory} te implementeren en eventueel extra \texttt{Parsers}. Het omzetten van een commando naar een nieuwe \texttt{Emergency} gebeurt dan volledig autonoom. Verder worden de belangrijkste associaties op een hoog niveau gelegd, waardoor we van de specifieke \texttt{Emergency} abstractie kunnen maken. Een analoge uitbreiding is deze van de \texttt{MapItem} types. Opnieuw kunnen we hier met een gelijkaardig scenario eenvoudig een extra \texttt{Unit} of \texttt{Building} toe te voegen.
 \paragraph{}
 Ook de userinterface kan verder uitgebreid worden. Hierbij wordt door middel van \textit{Polymorphism} een framework geleverd, waarbij men makkelijk nieuwe commando's kan toevoegen. Daar we ervan uitgaan dat het aantal use cases nog zal toenemen, is het aanbieden van dergelijke klassen dus te rechtvaardigen. Bovendien verkleint het de kans op fouten, in bijvoorbeeld het weergeven van de lijst van commando's.
 \paragraph{}
