Naam van figuur aangepast
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@523 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/iteratie2/bijlagen.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/bijlagen.tex
@@ -53,8 +53,9 @@
 \end{figure}
 \begin{figure}[h!]
   \centering
-  \includegraphics[width=1.0\textwidth, angle=-90]{SDDispatchUnits.pdf}
-  \caption{SD van de use case dispatch units.}
+  \subfigure[SD van de use case dispatch units.]{
+  \includegraphics[width=1.0\textwidth, angle=-90]{SDDispatchUnits.pdf}}
+  \caption{Sequence Diagrams.}
 \end{figure}
 
 \begin{figure}[h!]
